@@ -31,4 +31,5 @@ Revision history for Perl extension ViennaNGS.
 	- added write_multicov()
 	- added featCount_data() accessor for @featCount AoHoH 
 	- added normalization support for bigWigs generated from scripts/bam_split.pl
-	- refactored bam_split()
+	- refactored split_bam()
+	- intermediate bedGraph files are now removed in bed2bw()
